Fix: prevent bottom panel height to reduce because there is too much products

--- a/client/src/components/main/home/BottomPanel.scss
+++ b/client/src/components/main/home/BottomPanel.scss
@@ -9,6 +9,7 @@ $bottom-panel-height: 50px;
   justify-content: center;
   width: 100%;
   height: $bottom-panel-height;
+  min-height: $bottom-panel-height;
   margin-top: auto;
   padding: 5px 5px;
   background-color: $bottom-panel-color;
